--- a/m+a.html
+++ b/m+a.html
@@ -5,12 +5,13 @@
         <link rel="stylesheet" type="text/css" href="mna.css">
 	</head>
     <body>
-        <!-- ADD LINKS NEXT!!-->
-        <!-- FIGURE OUT HOW OTHER PAGES LOOK-->
         <div id="titleblock">
             <a href="index.html" style="text-decoration: none">
                 RACHEL LU
             </a>
+            <div class="three">
+                <B><U><a href="about.html" style="text-decoration:none">ABOUT</a></U></B>
+            </div>
         </div>
         
         <div class="one">
