--- a/mobile_index.html
+++ b/mobile_index.html
@@ -2,12 +2,7 @@
 	<head> 
     	<meta charset="UTF-8">
     	<title>RACHEL LU</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
-        <script type="text/javascript">
-            <!-- if (screen.width <=699)
-            {document.location = "mobile_index.html";}
-            //-->
-        </script>
+        <link rel="stylesheet" type="text/css" href="mobile_index.css">
 	</head>
     <body>
         <div id="titleblock">
