--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     	<meta charset="UTF-8">
     	<title>RACHEL LU</title>
         <link rel="stylesheet" type="text/css" href="index.css">
+        <!-- <script type="text/javascript">
+            if (screen.width <=400px)
+            {document.location = "mobile_index.html";}
+        </script>
+        -->
 	</head>
     <body>
         <div id="titleblock">
@@ -14,7 +19,7 @@
             </div>
         </div>
             
-        <div class="fuck">
+        <div class="first">
             <div class="one">
                 <div id="arch"> <B><U>ARCHITECTURE</U></B></div>
             </div>
@@ -62,7 +67,7 @@
             </div>
         </div>
             
-        <div class="shit">
+        <div class="second">
             <div class="two">
                 <div id="design"> <B><U>DESIGN</U></B></div>
             </div>
