--- a/cbbook.html
+++ b/cbbook.html
@@ -102,7 +102,7 @@
                     <img src="DESIGN_ASSETS/brandbook/cbbrandbook_Page_23.jpg" style="width:100%">
                 </div>
                 <div class="mySlides fade">
-                    <img src="DESIGN_ASSETS/brandbook/cbbrandbook_Page_24.jpg" style="width:100% fade">
+                    <img src="DESIGN_ASSETS/brandbook/cbbrandbook_Page_24.jpg" style="width:100%">
                 </div>
                 <div class="mySlides fade">
                     <img src="DESIGN_ASSETS/brandbook/cbbrandbook_Page_25.jpg" style="width:100%">
