--- a/gildotcom.html
+++ b/gildotcom.html
@@ -15,7 +15,7 @@
         I WENT TO SCHOOL AT TCIS- TAEJEON CHRISTIAN INTERNATIONAL SCHOOL. I WAS THE CAPTAIN OF THE SOCCER TEAM, VOLLEYBALL TEAM, AND JV BASKETBALL. <B>GO DRAGONS!</B>
         <BR></BR>
         <img src="JOKES/soccerboy.jpg" alt="ilovesoccer" width="800">
-        <img src="JOKES/bballboy.jpg" alt="me" width="400"><img src="vballboy.jpg" alt="me" width="400">
+        <img src="JOKES/bballboy.jpg" alt="me" width="400"><img src="JOKES/vballboy.jpg" alt="me" width="400">
         <BR></BR>
         I WAS ALSO STUDENT BODY PRESIDENT!
         <BR></BR>
