--- a/gildotcom.html
+++ b/gildotcom.html
@@ -30,7 +30,7 @@
         FOR MY FINAL STUDIO PROJECT, WITH THE HELP OF GERARD DAMIANI AND ANDREW MOSS, I CREATED THE GREATEST <U>CUBE HOUSE</U> OF ALL TIME. I BET YOU'D WISH IT WAS REAL SO YOU COULD HAVE YOUR WEDDING THERE. AFTERWARDS, I HAD KOREA GARDEN FOR DINNER WITH MY FRIENDS.
         <BR></BR>
         <img src="JOKES/hoopboys.jpg" height="300"><img src="JOKES/planterboy.jpg" height="300"><BR>
-        IN MY SECOND YEAR, I MADE A DOPE ASS HOOP HOUSE CALLED <I><a href="http://nohdaniel.com/architecture/moment.html"> MOMENT.</a></I> MY TEAM INCLUDED DANIEL, CHRISTOFF, CATHY, ANGELINA, AND OWEN WITH THE HELP OF TONYA AND JOSH BARD. IT LOOKED JUST LIKE MY PLANTER!
+        IN MY SECOND YEAR, I MADE A DOPE ASS HOOP HOUSE CALLED <I><a href="http://nohdaniel.com/architecture/moment.html"> MOMENT.</a></I> MY TEAM INCLUDED DANIEL, CHRISTOPH, CATHY, ANGELINA, AND OWEN WITH THE HELP OF TONYA AND JOSH BARD. IT LOOKED JUST LIKE MY PLANTER!
         </BR>
         FOLLOW ME ON INSTAGRAM @GILL.JPG @GILS.DAILY @RGBDOTCMYK
     
