--- a/bath.html
+++ b/bath.html
@@ -46,6 +46,10 @@
             <img src="ARCH_ASSETS/bath_elevation-02.png" alt="bath elevation2" width="550">
             <BR></BR>
             <img src="ARCH_ASSETS/bath_elevation-01.png" alt="bath elevation" width="550">
+            <BR></BR><img src="ARCH_ASSETS/bath_plan-02.png" alt="bath plan" width="550">
+            <BR></BR>
+            <BR></BR><img src="ARCH_ASSETS/bath_plan-03.png" alt="bath plan" width="550">
+            <BR></BR><BR></BR><img src="ARCH_ASSETS/bath_plan-01.png" alt="bath plan" width="550">
             <BR></BR>
         </div>
     </body>
