--- a/index.html
+++ b/index.html
@@ -26,16 +26,21 @@
             
             <div class="archlist">
                 <div id="termone">
+                    F_18<BR></BR><BR></BR><BR></BR>
                     S_18<BR></BR><BR></BR><BR></BR>
                     S_18<BR></BR><BR></BR><BR></BR>
                     S_18<BR></BR><BR></BR><BR></BR>
-                    S_18<BR></BR><BR></BR>
+                    S_18<BR></BR><BR></BR><BR></BR>
                     F_17<BR></BR><BR></BR><BR></BR>
                     F_17<BR></BR><BR></BR><BR></BR>
                     S_17<BR></BR><BR></BR><BR></BR>
                     F_16<BR></BR><BR></BR><BR></BR>
                 </div>
                 <div id="archproj">
+                    <a href="algae.html" style="text-decoration: none">
+                        <B> ALGAE COMMUNITY </B>
+                    </a><BR></BR>
+                        CONSTRUCTED ECOLOGIES <BR></BR><BR></BR>
                     <a href="home.html" style="text-decoration: none">
                         <B> GROUNDED </B>
                     </a><BR></BR>
@@ -50,7 +55,8 @@
                         BATH HOUSE<BR></BR><BR></BR>
                     <a href="m+a.html" style="text-decoration: none">
                         <B> MATERIALS AND ASSEMBLY </B>
-                    </a><BR></BR><BR></BR>
+                    </a><BR></BR>
+                    CONSTRUCTION DETAILING <BR></BR><BR></BR>
                     <a href="engage.html" style="text-decoration: none">
                         <B> ENGAGE </B> </a> 
                     <BR></BR>
@@ -74,12 +80,15 @@
         
         <div class="deslist">
             <div id="termtwo">
+                F_18<BR></BR><BR></BR><BR></BR>
                 S_18<BR></BR><BR></BR><BR></BR>
                 S_18<BR></BR><BR></BR><BR></BR>
                 S_18<BR></BR><BR></BR><BR></BR>
                 S_18<BR></BR><BR></BR><BR></BR>
             </div>
             <div id="desproj">
+                <a href="anatomy.html" style="text-decoration: none"><B> ANATOMY AND ORGANIC FORM </B></a><BR></BR>
+                        DRAWING <BR></BR><BR></BR>
                 <a href="cbbook.html" style="text-decoration: none"><B> BRAND BOOK 2018</B></a><BR></BR>
                         COCO AND BREEZY <BR></BR><BR></BR>
                 <a href="cbbrand.html" style="text-decoration: none"><B> BRANDING GUIDE </B></a><BR></BR>
