--- a/office.html
+++ b/office.html
@@ -54,6 +54,9 @@
                 Each wall acts as a filter or threshold- separating what is street vs. site, exterior vs. interior space, public vs. private space, and different programmatic spaces.
             </div>
             <BR></BR>
+            <img src="ARCH_ASSETS/office_plan-01.png" alt="office section" width="600">
+            <div id="caption">05 PLANS </div>
+            <BR></BR><BR></BR>
         </div>
     </body>
 </html>
