--- a/about.html
+++ b/about.html
@@ -24,15 +24,15 @@
                 <BR><B>WHO:</B> RACHEL LU
                 </BR>
                 <B>WHAT:</B> THIRD YEAR B.ARCH STUDENT / <BR>
-                GRAPHIC DESIGNER AT COCO AND BREEZY EYEWEAR</BR>
+                FREELANCE GRAPHIC DESIGNER </BR>
                 <B>WHERE:</B> CARNEGIE MELLON UNIVERSITY, PITTSBURGH, PA<BR>
-                <B>HOMETOWN:</B> BROOKLYN, NY
-                </BR> <BR>
+                <B>HOMETOWN:</B> BROOKLYN, NY</BR>
+                <BR>
                 <B><U>CONTACT:</U></B></BR>
                 <B>EMAIL:</B> rachell@andrew.cmu.edu <BR>
                 <B> INSTAGRAM: </B> @rchl.art
                 </BR>
-                <B> RESUME: </B> email me
+                <B> RESUME: </B> click here
                 <BR></BR>
                 <BR></BR>
             </div>
